tests/parser/fail/v40_fail_product_equals.ep
# COMPILE_FAIL_CONTAINS: Expected ID
type Legacy = {
    value: i64
}
